--- a/public/views/templates/navigation.html
+++ b/public/views/templates/navigation.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item" ui-sref-active='active' ui-sref='home'>
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Avatars <span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
