--- a/public/views/layouts/layout.html
+++ b/public/views/layouts/layout.html
@@ -35,6 +35,8 @@
   <!-- Controllers -->
   <script src='ngApp/controllers/homeCtrl.js'></script>
   <script src='ngApp/controllers/navCtrl.js'></script>
+  <script src='ngApp/controllers/petsCtrl.js'></script>
+  <script src='ngApp/controllers/viewAvatarCtrl.js'></script>
 
   <!-- Services -->
   <script src='ngApp/services/apiService.js'></script>
