--- a/public/views/templates/navigation.html
+++ b/public/views/templates/navigation.html
@@ -8,6 +8,10 @@
       <li class="nav-item" ui-sref-active='active' ui-sref='home'>
         <a class="nav-link" href="#">Avatars <span class="sr-only">(current)</span></a>
       </li>
+
+      <li class="nav-item" ui-sref-active='active' ui-sref='pets'>
+        <a class="nav-link" href="#">Pets <span class="sr-only">(current)</span></a>
+      </li>
     </ul>
   </div>
 </nav>
